test_src/compiler_errors/vars/UninitializedVarError6.b
class UninitializedVarError6 {
    void test(Int foo) {
        var bar;
        var baz = foo < 5 && (bar = 3) < foo;
        println(bar);
    }
}
